# Energy-Efficient-Touch-Localization

./: .gitignore  .readthedocs.yaml  README.md  requirements.txt
doc/: Doxyfile.in  conf.py  examples.rst  setup.rst
doc/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  setup.doctree
doc/_build/doctrees/api/: index.doctree  model.doctree  python_utils.doctree
doc/_build/html/: .buildinfo  annotated.html  class_network-members.html  class_network.html  class_neuron-members.html  class_neuron.html  class_random_generator-members.html  class_random_generator.html  class_sub_network-members.html  class_sub_network.html  classes.html  classpython__utils_1_1_spike_sim-members.html  classpython__utils_1_1_spike_sim.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  functions.html  functions_func.html  functions_vars.html  genindex.html  index.html  menudata.js  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  sitemap.xml
doc/_build/html/_modules/: index.html  python_utils.html
doc/_build/html/_sources/: examples.rst.txt  index.rst.txt
doc/_build/xml/: Doxyfile.xml  class_network.xml  class_neuron.xml  class_random_generator.xml  class_sub_network.xml  classpython__utils_1_1_spike_sim.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  main_8cpp.xml  model_8cpp.xml  model_8hpp.xml  namespacepython__utils.xml  namespacestd.xml  python__utils_8py.xml
doc/example/Train/: config_training1.yaml  training.yaml
src/: CMakeLists.txt  main.cpp  model.cpp  model.hpp  python_utils.py
(+51 files in other folders)
